added some styles

--- a/index.html
+++ b/index.html
@@ -15,25 +15,32 @@
       <div class="column">
         <img class="icon" src="images/icon-sedans.svg" alt="icon of a sedan">
         <h1 class="title">Sedans</h1>
+        <div class="text-container">
           <p class="text">Choose a Sedan for its affordability and excellent fuel economy. Ideal for cruising in the
             city
             or on your next road trip.</p>
+        </div>
         <button class="btn" id="orange">Learn More</button>
       </div>
 
       <div class="column">
         <img class="icon" src="images/icon-suvs.svg" alt="icon of a suv">
         <h1 class="title">Suvs</h1>
-        <p class="text">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family
-          vacation and off-road adventures.</p>
+        <div class="text-container">
+          <p class="text">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family
+            vacation and off-road adventures.</p>
+        </div>
         <button class="btn" id="cyan">Learn More</button>
       </div>
 
       <div class="column">
         <img class="icon" src="images/icon-luxury.svg" alt="icon of a luxury car">
         <h1 class="title">Luxury</h1>
-        <p class="text">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-          rental and arrive in style.</p>
+        <div class="text-container">
+          <p class="text">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a
+            luxury
+            rental and arrive in style.</p>
+        </div>
         <button class="btn" id="dark-cyan">Learn More</button>
       </div>
     </main>
